Fixed overlapping border class [skip chromatic]

--- a/src/themes/default/src/scss/_multiselect.scss
+++ b/src/themes/default/src/scss/_multiselect.scss
@@ -33,6 +33,7 @@ select.multi-select {
 
 .ss-main.multi-select {
   padding: 0;
+  border: none;
   &.form-select.is-invalid,
   &.form-select.is-valid {
     background: none;
